--- a/src/app/test-chart/test-chart.component.css
+++ b/src/app/test-chart/test-chart.component.css
@@ -109,7 +109,7 @@ body {
     background-color: #d4edda;
   }
   
-  .cell {
+  /* .cell {
     position: relative;
     height: 40px;
     text-align: center;
@@ -117,7 +117,7 @@ body {
     border: 1px solid #EAEAEA;
     overflow: visible; 
     overflow: visible !important;
-  }
+  } */
   
   .cell {
     position: relative;
@@ -128,9 +128,9 @@ body {
     overflow: hidden; /* Ensure overflow is handled */
     white-space: nowrap; /* Prevent text wrapping */
     text-overflow: visible; /* Show ellipsis for overflowing text */
+    display: flex;
+    width: 100%;
   }
-  
-  
   
   .reservation-span {
     background-color: rgba(90, 90, 207, 0.5);  /* Color for the reservation */
@@ -141,19 +141,7 @@ body {
     text-align: center;
   }
   
-  .cell span {
-    position: absolute;
-    top: 50%; /* Align to the top of the cell */
-    /* left: 50%;  */
-    transform: translate(-50%, -50%);
-    width: 100%; /* Span the full width of the reservation cells */
-    /* height: 100%; */
-    white-space: nowrap; /* Prevent text wrapping */
-    overflow: hidden; /* Hide overflow */
-    text-overflow: ellipsis; /* Show ellipsis for overflow */
-    display: inline-block; 
-    padding: 0 5px;
-  }
+  
   
   .cell.reserved {
     position: relative;
@@ -162,8 +150,6 @@ body {
     border: none;
     border-top: 1px solid white;
     border-bottom:1px solid white;
-    pointer-events: auto;
-    
   }
   
   .cell.checked-in {
@@ -207,11 +193,30 @@ body {
     border-bottom-left-radius: 40px !important;
   }
   
-  .cell.valid-departure {
-    border: 2px dashed #1940dc; /* Dashed green border for valid departure days */
-    background-color: #eafbe7;   /* Light green background */
+  .cell div.left-half-container, .cell div.right-half-container{
+    position: relative;
+    /* display: inline-block;
+    width: 50%; */
+    display: inline-block;
+    width: 50%;
+    /* background-color: blue; */
+    height: 40px;
+    /* border: 1px solid red; */
   }
   
+  .cell span {
+    position: absolute;
+    top: 50%; /* Align to the top of the cell */
+    /* left: 50%;  */
+    transform: translate(-50%, -50%);
+    width:max-content; /* Span the full width of the reservation cells */
+    /* height: 100%; */
+    white-space: nowrap; /* Prevent text wrapping */
+    overflow: visible; /* Hide overflow */
+    text-overflow: visible; /* Show ellipsis for overflow */
+    display: block; /* Ensure it behaves like a block element within the cell */
+    padding: 0 5px;
+  }
   
   .selected {
     border: 2px solid #7aec1c; 
@@ -225,7 +230,7 @@ body {
     border-right: 2px solid #7aec1c;
   }
   
-  .cell.available.arrival-day {
+  .available-arrival-day {
     background-color: #c3e6cb; /* Slightly greener color for arrival days */
     /* cursor: pointer; */
   }
@@ -351,35 +356,3 @@ body {
   .tooltip{
     z-index: 10000 !important; 
   }
-  
-  /* ======== loading spinner ==========*/
-  
-  /* Spinner container */
-  .spinner-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.8);
-    z-index: 1000;
-  }
-  
-  /* Spinner styling */
-  .spinner {
-    border: 12px solid #f3f3f3; /* Light grey */
-    border-top: 12px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    animation: spin 1.5s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  
