--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -14,11 +14,12 @@
     flex-wrap: wrap; */
     gap: 8px;
   }
-/* 
- .final-page{
-  box-shadow: #ddd;
-  border: 0.5px black;
- } */
+
+  .disabled-button {
+    background-color: #d3d3d3;
+    cursor: not-allowed;
+    border: none;
+  }
 
 .modal-footer {
   display: flex;
@@ -135,16 +136,16 @@
   }
   
   .invoice-section {
-    border: 1px solid #ddd;
-    padding: 10px;
+    /* border: 1px solid #ddd; */
+    padding: 5px;
     border-radius: 5px;
   }
   
   .invoice-section h2 {
     font-size: 18px;
     border-bottom: 2px solid #333;
-    padding-bottom: 5px;
-    margin-bottom: 10px;
+    padding-bottom: 3px;
+    margin-bottom: 3px;
   }
   
   .invoice-section p {
