--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -35,7 +35,7 @@ body {
   font-weight: bold;
   position: sticky;
   left: 0;
-  z-index: 10;
+  z-index: 5;
 }
 
 
@@ -52,6 +52,9 @@ body {
   height: 50px;
   padding: 5px;  
   font-weight: bold;
+  position: sticky;
+  left: 0;
+  z-index: 5;
 }
 
 .month-header {
@@ -63,7 +66,12 @@ body {
   align-items: center;
   justify-content: center;
   border: 1px solid #FEFEFE;
+  position: sticky;
+  left: 0;
+  z-index: 10;
 }
+
+
 
 .month-name {
   font-weight: bold;
@@ -109,7 +117,7 @@ h4{
   background-color: #d4edda;
 }
 
-.cell {
+/* .cell {
   position: relative;
   height: 40px;
   text-align: center;
@@ -117,7 +125,7 @@ h4{
   border: 1px solid #EAEAEA;
   overflow: visible; 
   overflow: visible !important;
-}
+} */
 
 .cell {
   position: relative;
@@ -143,10 +151,10 @@ h4{
 
 .cell span {
   position: absolute;
-  top: 50%; /* Align to the top of the cell */
+  top: 50%; 
   /* left: 50%;  */
   transform: translate(-50%, -50%);
-  width: 100%; /* Span the full width of the reservation cells */
+  width: 100%; 
   /* height: 100%; */
   white-space: nowrap; /* Prevent text wrapping */
   overflow: hidden; /* Hide overflow */
